--- a/static/css/app.css
+++ b/static/css/app.css
@@ -2,9 +2,29 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   font-size: 14px;
   line-height: 1.5;
+  background-color: #f9f9f9;
 }
 
 .container {
   max-width: 960px;
   margin: 0 auto;
+}
+
+h1{
+  color: #2a3d66;
+  font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+}
+
+p{
+  color: #333;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+img{
+ display: block;
+ margin-left: auto;
+ margin-right: auto;
+ height:250px ;
+ width: 210px;
+
 }
